Fixed gap on right side of content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 .space{
-    padding: 40px 0;
+    padding: 40px;
     margin-top: 5px;
 }
 
@@ -100,7 +100,7 @@ h4 {
 }
 
 .navbar-toggler{
-    padding-right: 20px;
+    padding-right: 10px;
     border: none;
     font-size: 1rem;
 }
